--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "graphql": "^16.12.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
